
===========
Changes log  
===========

@version-full@ (@release-date@)
[Bugs fixed]
 - Added missing dependency on Apache Commons IO for the Commons FileUpload library. Reported by Thierry Boileau.
 
[API changes]
 - The default HTTPS connector for Jetty is now BIO based because the NIO one is marked as
   "beta quality" only.
 
[Enhancements] 
 - Enhanced support of Java SE 4.0 via Retrotranslator.

1.0 RC4 (2007-01-26)
[Bugs fixed]
 - Guard.authorize() doesn't call authenticate() anymore as doHandle() was already checking
   this point. Was pontially resulting in two calls to authenticate(). Reported by Vincent Lari.
 - Replaced "RESTlet" by "Restlet" in all logos to match the actual project name.
 - Fixed bug in DomRepresentation's constructor for empty Documents. Reported by David Rauschenbach.
 - Fixed a potential classloader issue with Resin 3.0.19 servlet container. Reported by Denis Haskin.
 - Force sort order for list of representations set by the DirectoryResource.
 - Fixed issue with the "timeout" property (class HTTPUrlConnection) which is not defined in Java 1.4. 
   Reported by Stephan Schmitt. 
 - FileRepresentation(String path) constructor now accepts both simple path names and file URI. 
   Suggested by Sean Landis.
 - Fixed bug with repeated patterns in URI templates. Reported by Vincent Lari.
 - Fixed bugs in some POM files. Reported by Mitchell Stewart.
 - The query need to be reconstruct and appended to the requestURI in order to get the "full" uri 
   from AsyncWeb request object. Reported by David Rauschenbach.
 - Fixed NPE in the URI template scoring method.
   
[API changes]
 - Added Resource.getPreferredRepresentation() method as a shortcut to  
   getRepresentation(getPreferredVariant()).
 - Renamed org.restlet.util.Factory to Engine as it does more than just providing factory methods.
 - Added init(Context, Request, Response) method and default constructor to Resource.